service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-gateway
spec:
  selector:
    app: client-gateway
  ports:
  - port: 80
    targetPort: 3000
  type: NodePort
